<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="afterDescendants"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/newsTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_News"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/news_dashboard_mini_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/investorPresentationTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_InvestorPresentation"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/investor_relations_homepage_icons" />
        </RelativeLayout>



        <include
            android:id="@+id/latestPresentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="7dp"
            layout="@layout/row_big_report_item" />


        <RelativeLayout
            android:id="@+id/stocksTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_Stock"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/stocks_dashboard_mini_icon" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="visible"
                app:seriesColor="#ee0000"
                app:seriesType="line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topPanel"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/popupPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="70dp"
                    android:minWidth="100dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/popup_background"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/timeTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="Time : 09.58"
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/volumeTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="Volume : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/akbankTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="Akbank : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/bist30Tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="BIST30 : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/bistBankTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="BIST BANK : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/usdTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="USD : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/eurTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:padding="1dp"
                            android:paddingRight="4dp"
                            android:text="EUR : "
                            android:textColor="@color/red"
                            android:textSize="9dp" />

                    </LinearLayout>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/dot"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:visibility="gone"
                    android:src="@drawable/red_circle_shape" />
            </RelativeLayout>
        </RelativeLayout>




        <RelativeLayout
            android:id="@+id/calendarTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_Calendar"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/calendar_dashbard_mini_icon" />
        </RelativeLayout>


        <include layout="@layout/dashboard_calendar_layout" />


        <RelativeLayout
            android:id="@+id/annualReportsTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_AnnualReports"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/annual_reports_dashboard_mini_icon" />
        </RelativeLayout>

        <include layout="@layout/content_annual_report_summary" />


        <RelativeLayout
            android:id="@+id/webcastsTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/webcastsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_Webcasts"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/rectangle_310_imported_layers_copy" />
        </RelativeLayout>

        <include layout="@layout/content_webcast_summary" />


        <RelativeLayout
            android:id="@+id/aboutTurkeyTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_AboutTurkey"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/about_turkey_dashboard_mini_icon" />
        </RelativeLayout>

        <include layout="@layout/content_about_turkey_summary" />


        <RelativeLayout
            android:id="@+id/ratingsTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/DashboardHeader_Ratings"
                android:textColor="@color/tomato" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ratings_dashboard_mini_icon" />
        </RelativeLayout>

        <include layout="@layout/content_ratings_summary" />


    </LinearLayout>

</ScrollView>
